--- a/assets/main.css
+++ b/assets/main.css
@@ -86,9 +86,9 @@
  .bottom-right {font-size:2.167em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 0px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 12px #000000;}
  
  /* Conference Title Logo */
- .title1{font-size: 2.167em; color: #fafafa;} 
+ .title1{font-size: 2.167em; color: #0847d9;} 
  .title2{font-size: 4.33em; color: #b2132e; text-shadow: 0px 0px 4px #fafafa;}
- .year{font-size: 4.33em; color: #fafafa;}
+ .year{font-size: 4.33em; color: #0847d9;}
  
  /* Navigation Links (Home, Registration, etc) */
  table.navigation{width:900px;}
